--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!--NEW-->	
 	
 <div>
-   <img width = "100%" src="https://i.imgur.com/o6lxZTy.png">
+   <img width = "100%" src="https://i.imgur.com/fayXAh9.png">
 </div>
 <div>  
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/IseJV9nJ4og" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
