--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
 <!DOCTYPE html>
 <html><head>
-<title>QUINN C. MARTIN - COMEDIAN & ACTOR</title>
+<title>SHAWKI SUKKAR - Blockchain Engineer in Aleppo, Syria</title>
 <style>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
