--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--NEW-->	
 	
 <div>
-   <img width = "100%" src="https://i.imgur.com/nWtmYBa.png">
+   <img width = "100%" src="https://i.imgur.com/h5N7JoU.png">
 </div>
 </body>
 </html>
